--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/wix/purple-mod-b#readme",
   "dependencies": {
-    "purple-engine": "^1.0.2",
     "purple-lib-q": "^2.0.0",
     "purple-lib-r": "^1.0.3"
+  },
+  "peerDependencies": {
+    "purple-engine": "*"
+  },
+  "devDependencies": {
+    "purple-engine": "^1.0.2"
   },
   "purple": {
     "modules": [
